CPT-63 # added function detail article
